fixes popover scrollbar issue

--- a/app/sass/components/_popover-container.scss
+++ b/app/sass/components/_popover-container.scss
@@ -5,8 +5,8 @@
     content: " ";
     height: 0;
     width: 0;
-    top:285px;
-    position: relative;
+    top:47%;
+    position: absolute;
     display: inline-block;
     pointer-events: none;
     border-top-color: #383838;
@@ -14,20 +14,26 @@
     margin-left: -32px;
     vertical-align: middle;
     @include transform(rotate(90deg));
-  }
 
+  }
+  &.goal:before{
+    margin-left: -7px;
+
+  }
   .popover-inner{
     opacity: 0.95;
     box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.25);
     overflow-y: scroll;
     position: relative;
-    height: 570px;
+    max-height: 570px;
     width: 310px;
     padding: 25px;
     background-color: white;
     border-left: solid 3px #383838;
     color: #383838;
-
+    &.goal{
+      margin-left: 25px;
+    }
     h2{
       font-family: "franklin-gothic-urw", helvetica, arial, sans-serif;
       font-size: 18px;
