--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -37,7 +37,15 @@ body{
   background-color: #E9E9E9;
   font-family: "franklin-gothic-urw", helvetica, arial, sans-serif;
   overflow: hidden;
+
+  &.on-dragging{
+    cursor:
+    url('../images/hand.cur'),
+    url('../images/hand.gif'),
+    move !important;
+  }
 }
+
 
 .collapsable {
   display: inline-block;
