--- a/app/sass/pages/_planner.scss
+++ b/app/sass/pages/_planner.scss
@@ -17,6 +17,7 @@
     float: left;
     background-color: #f5f5f5;
     border-right: 1px solid #dadada;
+    -webkit-transform: translate3d(0, 0, 0);
 
   }
 
@@ -27,6 +28,7 @@
     float: left;
     background-color: #f5f5f5;
     overflow-y: scroll;
+    -webkit-transform: translate3d(0, 0, 0);
 
     .course-container{
       cursor:
@@ -41,7 +43,18 @@
       }
 
     }
-
+    .course-container:active{
+      cursor:
+      url('../images/hand.cur'),
+      url('../images/hand.gif'),
+      move !important;
+    }
+    .course-container:focus{
+      cursor:
+      url('../images/hand.cur'),
+      url('../images/hand.gif'),
+      move !important;
+    }
   }
   .dropdown {
     padding-bottom: 25px;
